# bird-head-detector

beaker/: Cargo.toml  Makefile  line_counts.md
beaker/src/: config.rs  cutout_processing.rs  depfile_generator.rs  detection.rs  lib.rs  main.rs  model_processing.rs  output_manager.rs  stamp_manager.rs
beaker/tests/: PARALLEL_STRESS_TEST_PLAN.md  README.md  phase_2_stress_tests.rs  stress_framework_test.rs
beaker/tests/stress/: fixtures.rs  mock_servers.rs  mod.rs  orchestrator.rs  performance.rs  tcp_fault_server.rs  tests.rs  validators.rs
head_model/: pyproject.toml  train.py
