[package]
name         = "beaker"
version      = "0.1.1"
edition      = "2021"
description  = "Detect bird heads in images using YOLOv8 (Rust implementation)"
readme       = "README.md"
license      = "AGPL-3.0"
repository   = "https://github.com/ericphanson/beaker"
authors      = ["Eric Hanson"]

[[bin]]
name = "beaker"
path = "src/main.rs"

[dependencies]                  # (shared by every target)
clap   = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0"
log = "0.4"
env_logger = "0.11"
ort    = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "download-binaries"] }
image  = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ndarray = "0.16"
anyhow  = "1.0"
serde   = { version = "1.0", features = ["derive"] }
toml    = "0.9"
chrono  = { version = "0.4", features = ["serde"] }
glob    = "0.3"
dirs    = "6.0"
sha2    = "0.10"
md5     = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
base64  = "0.22"
flate2  = "1.1"
colored = "3.0.0"
indicatif = "0.18"
once_cell = "1.21.3"
indicatif-log-bridge = "0.2.3"

[target.'cfg(target_os = "macos")'.dependencies]
# Add Core ML only where the pre-built binary exists
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["coreml", "download-binaries", "ndarray"] }
# ───────────────────────────────────────────────────────────────
[dev-dependencies]
tempfile = "3.8"
paste = "1.0"

# Stress testing dependencies
httpmock = "0.7.0"              # HTTP mocking with deterministic failure injection
hyper = "0.14"                  # Small helper for TCP-level fault injection (~50 LOC)
tokio = { version = "1.0", features = ["rt", "net"] }  # Only for hyper helper
serde_json = "1.0"              # For test result serialization
fail = "0.5"                    # Failpoints for crash testing (test-only)
fd-lock = "4.0"                 # Cross-process lock validation
sha2 = "0.10"                   # SHA-256 checksums for test fixtures

[build-dependencies]
ureq        = { version = "2.12", features = ["json"] }
serde_json  = "1.0"

# ───────────────────────────────────────────────────────────────
# Profiles
# ───────────────────────────────────────────────────────────────
[profile.release]
lto            = true
codegen-units  = 1
panic          = "abort"
strip          = true
rpath          = true

[profile.dev]
rpath = true
